--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- <div class="scoreBoard">Score: 0</div> -->
-    <div class="scoreBoard">Score: 0 | Level: <span id="difficultyLevel">Easy</span></div>
+    <div class="scoreBoard">Score: 0 <span id="difficultyLevel"></span></div>
     <div class="mobile-controls">
         <button id="hugeWeaponBtn">💥</button>
         <button id="pauseGame">Pause</button>
